add color to nav

--- a/restaurant.html
+++ b/restaurant.html
@@ -14,23 +14,25 @@
     <title>RestaurantInd</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark navBg">
-            <img src="https://png.pngtree.com/element_pic/00/16/08/2857c1d18c3f678.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mr-auto">
+    <nav class="navbar navbar-default  fixed-top navbar-expand-md navBg">
+        <div class="container" id="container">
+                <img src="https://png.pngtree.com/element_pic/00/16/08/2857c1d18c3f678.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mr-auto">
+                    </div>
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="#menu">Menu <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#reservation">Reservation</a>
+                        <a class="nav-item nav-link" href="#gallery">Gallery</a>
+                        <a class="nav-item nav-link" href="#about">AboutUs</a>
+                        <a class="nav-item nav-link" href="#contact">ContactUs</a>
+                    </div>
                 </div>
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#menu">Menu <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#reservation">Reservation</a>
-                    <a class="nav-item nav-link" href="#gallery">Gallery</a>
-                    <a class="nav-item nav-link" href="#about">AboutUs</a>
-                    <a class="nav-item nav-link" href="#contact">ContactUs</a>
-                </div>
-            </div>
+        </div>
           </nav>
     <div class="bg-1">
         <a id="menu"></a>
